--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,10 +3,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+font-family: 'Calibri';
   margin: 0 0 30px;
-  background-color: #622a5e;
+  background-color: #fcd7de;
   overflow: hidden;
+  height: 200px;
 }
 
 .nav a {
@@ -14,9 +15,9 @@
 }
 
 .nav-title {
-  font-size: 32px;
+  font-size: 34px;
   font-weight: 800;
-  color: #f2f2f2;
+  color: #000000;
   text-align: center;
   padding-left: 10px;
   margin: 0;
@@ -24,8 +25,8 @@
 
 .navLink {
   display: inline-block;
-  color: #f2f2f2;
-  background-color: #622a5e;
+  color: #000000;
+  background-color: #fcd7de;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
@@ -39,7 +40,7 @@
 }
 
 .navLink:hover {
-  background-image: linear-gradient(144deg, #bf83e8, #7b74a5 50% ,#7ca4a6);
+  background-image: linear-gradient(144deg, #e9d2fa, #ddd7fb 50% ,#e4f8f9);
 
 }
 
