--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -21,6 +21,7 @@ font-family: 'Calibri';
   text-align: center;
   padding-left: 10px;
   margin: 0;
+  background-color: #fcd7de;
 }
 
 .navLink {
@@ -43,4 +44,6 @@ font-family: 'Calibri';
   background-image: linear-gradient(144deg, #e9d2fa, #ddd7fb 50% ,#e4f8f9);
 
 }
+
+
 
